--- a/jam/_type.scss
+++ b/jam/_type.scss
@@ -31,42 +31,35 @@ body {
     margin: 0 0 2rem 0;
     font-size: 4.4rem;
     font-weight: 300;
-    line-height: 5.2rem;
+    line-height: 4.8rem;
         
-    @include media(lower-phone) {
+    @include media(phone) {
         margin: 0 0 2rem 0;
-        font-size: 3.8rem;
+        font-size: 4.0rem;
         line-height: 4.4rem;
     }
     
 }
 
 @mixin h2 {
-    
     margin: 0 0 2rem 0;
-    font-size: 3.4rem;
+    font-size: 3.6rem;
     font-weight: 300;
-    line-height: 4.4rem;
-        
-    @include media(phone) {
-        font-size: 3.4rem;
-        line-height: 4rem;
-    }
-    
+    line-height: 4.0rem;
 }
 
 @mixin h3 {
     margin: 0 0 2rem 0;
-    font-size: 3.0rem;
+    font-size: 3.2rem;
     font-weight: 300;
-    line-height: 4.0rem;
+    line-height: 3.6rem;
 }
 
 @mixin h4 {
     margin: 0 0 2rem 0;
     font-size: 2.6rem;
     font-weight: 300;
-    line-height: 3.6rem;
+    line-height: 3.4rem;
 }
 
 @mixin p-large {
